...
            "value" : "Settings"
          }
        },
        "ru" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Настройки"
          }
        }
      }
    },
    "accessibility.share.button" : {
      "extractionState" : "manual",
...
